--- a/styles/blocks/features.css
+++ b/styles/blocks/features.css
@@ -24,6 +24,12 @@
   font-size: 14px;
   font-weight: 400px;
 }
+.screen-features-desktop {
+  display: none;
+}
+.screen-features-tablet {
+  display: none;
+}
 @media screen and (min-width: 660px) {
   .features {
     background-image: url("../../images/grey-shape-tablet.svg");
@@ -41,6 +47,14 @@
   .features__list {
     width: 320px;
     float: right;
+  }
+  .screen-features-desktop {
+    display: none;
+  }
+  .screen-features-tablet {
+    display: block;
+    position: relative;
+    left: 19px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -80,6 +94,8 @@
     font-size: 30px;
     margin: 0;
     box-shadow: 0.1px -10px 10px -10px grey;
+    position: relative;
+    z-index: 100;
   }
   .features__item-text {
     background-color: #f2f2f2;
@@ -87,136 +103,16 @@
     font-size: 18px;
     margin: 0;
   }
-}
-
-  /*@media @tablet {
-    background-size: 100% 50px;
+  .screen-features-desktop {
+    display: block;
+    position: relative;
+    top: -560px;
+    right: -33px;
   }
-
-  @media @desktop {
-    background-size: 100% 92px;
+  .screen1-desktop {
+    top: -584px;
   }
-}
-
-.features__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
-  padding: 64px 20px 305px;
-  list-style: none;
-  background-image: url("../img/iphone-screen-mobile@1x.png");
-  background-position: 50% ~"calc(100% + 43px)";
-  background-size: image-size("../img/iphone-screen-mobile@1x.png");
-  background-repeat: no-repeat;
-
-  @media @retina {
-    background-image: url("../img/iphone-screen-mobile@2x.png");
-  }
-
-  @media @tablet {
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 55px 20px 27px;
-    width: 620px;
-    background-image: url("../img/iphone-screen-3-tablet@1x.png");
-    background-position: 20px 3px;
-    background-size: image-size("../img/iphone-screen-3-tablet@1x.png");
-
-    @media @retina {
-      background-image: url("../img/iphone-screen-3-tablet@2x.png");
-    }
-  }
-
-  @media @desktop {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: stretch;
-    padding: 0 0 34px;
-    width: 960px;
-    background: none;
-
-    @media @retina {
-      background: none;
-    }
+  .screen-features-tablet {
+    display: none;
   }
 }
-
-.features__item {
-  margin-bottom: 13px;
-  width: 280px;
-  text-align: center;
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-
-  @media @tablet {
-    margin-bottom: 0;
-    width: 310px;
-    text-align: left;
-  }
-
-  @media @desktop {
-    padding-top: 339px;
-    width: 240px;
-    line-height: 30px;
-    text-align: center;
-    background-size: 292px 302px;
-  }
-
-  &--first {
-    @media @desktop {
-      background-image: url("../img/iphone-screen-1-desktop@1x.png");
-
-      @media @retina {
-        background-image: url("../img/iphone-screen-1-desktop@2x.png");
-      }
-    }
-  }
-
-  &--second {
-    @media @desktop {
-      background-image: url("../img/iphone-screen-2-desktop@1x.png");
-
-      @media @retina {
-        background-image: url("../img/iphone-screen-2-desktop@2x.png");
-      }
-    }
-  }
-
-  &--third {
-    @media @desktop {
-      background-image: url("../img/iphone-screen-3-desktop@1x.png");
-
-      @media @retina {
-        background-image: url("../img/iphone-screen-3-desktop@2x.png");
-      }
-    }
-  }
-}
-
-.features__item-title {
-  margin-top: 18px;
-  margin-bottom: 12px;
-  font-size: 18px;
-  font-weight: bold;
-  color: @black;
-
-  @media @desktop {
-    margin-bottom: 24px;
-    font-size: 30px;
-  }
-}
-
-.features__item-text {
-  margin-top: 0;
-  margin-bottom: 0;
-
-  @media @tablet {
-    margin-top: 12px;
-    margin-bottom: 16px;
-  }
-
-  @media @desktop {
-    font-size: 18px;
-  }
-}*/
