--- a/styles/blocks/main-page-header-content.css
+++ b/styles/blocks/main-page-header-content.css
@@ -62,12 +62,12 @@
     top: 66px;
   }
 }
-@media screen and (min-resolution: 144dpi) and (min-width: 660px) {
+/*@media screen and (min-resolution: 144dpi) and (min-width: 660px) {
   .header-content {
     background-image: url("../../images/back-tablet@2x.jpg");
   }
-}
-@media screen and(min-width: 1200px) {
+}*/
+@media screen and (min-width: 1199px) {
   .header-content {
     background-image: url("../../images/back-desktop@1x.jpg");
     min-height: 853px;
@@ -94,6 +94,11 @@
   }
   .iphone-image--desktop {
     display: block;
+    top: 195px;
+  }
+  .ipnone-image__item-screen {
+    right: 121px;
+    top: 77px;
   }
 }
 @media screen and (min-resolution: 144dpi) and (min-width: 1200px) {
