--- a/stylesCSS/blocks/features.css
+++ b/stylesCSS/blocks/features.css
@@ -29,7 +29,7 @@
 .screen-features-tablet {
   display: none; }
 
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 481px) {
   .features {
     background-image: url("../../images/grey-shape-tablet.svg");
     background-position-y: -7px;
@@ -39,7 +39,7 @@
     padding: 20px;
     padding-top: 75px;
     background-image: url("../../images/iphone-features-tablet.svg");
-    background-position: 5% 5%;
+    background-position: 20px 5%;
     background-repeat: no-repeat; }
   .features__list {
     width: 320px;
@@ -49,9 +49,9 @@
   .screen-features-tablet {
     display: block;
     position: relative;
-    left: 18px; } }
+    left: 13px; } }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1025px) {
   .features {
     background-image: url("../../images/grey-shape-desktop.svg");
     background-position-y: unset;
