--- a/stylesCSS/blocks/efficiency.css
+++ b/stylesCSS/blocks/efficiency.css
@@ -1,10 +1,10 @@
 .efficiency {
   display: none; }
-  @media screen and (min-width: 660px) {
+  @media screen and (min-width: 481px) {
     .efficiency {
       display: block;
       background-color: #ffffff; } }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency {
       display: block;
       background-color: #f2f2f2; } }
@@ -13,25 +13,23 @@
   margin: 0 auto;
   padding: 60px 20px 72px;
   width: 280px; }
-  @media screen and (min-width: 660px) {
+  @media screen and (min-width: 481px) {
     .efficiency__content-wrapper {
       display: flex;
       justify-content: space-between;
       width: 100%; } }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__content-wrapper {
-      padding: 17px 130px 66px;
-      width: 100%; } }
+      padding: 17px 120px 66px; } }
 
 .efficiency__image {
-  box-sizing: border-box;
   padding: 75px 64px 51px;
   width: 238px;
   background-image: url("../../images/diagram-fill.svg"), url("../../images/timer.svg");
   background-repeat: no-repeat, no-repeat;
   background-size: 202px 202px, 238px 276px;
   background-position: 19px 55px, 0 0; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__image {
       padding: 94px 64px 64px 80px;
       width: 298px;
@@ -43,7 +41,7 @@
   font-weight: 700;
   line-height: 150px;
   color: #d22856; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__image-text {
       font-size: 120px;
       line-height: 187px; } }
@@ -51,12 +49,13 @@
 .efficiency__description {
   margin-top: 11px;
   margin-left: 70px; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__description {
       margin-top: 65px;
-      width: 573px;
+      max-width: 490px;
       font-size: 18px;
-      line-height: 30px; } }
+      line-height: 30px;
+      margin-left: 15px; } }
 
 .efficiency__title {
   margin-top: 23px;
@@ -66,7 +65,7 @@
   font-weight: 700;
   line-height: 36px;
   color: #000000; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__title {
       margin-top: 24px;
       margin-bottom: 22px;
@@ -75,7 +74,7 @@
 .efficiency__text {
   margin-top: 10px;
   margin-bottom: 11px; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__text {
       margin-top: 22px;
       margin-bottom: 31px; } }
