--- a/stylesCSS/main.css
+++ b/stylesCSS/main.css
@@ -10,77 +10,73 @@
   text-align: center;
   position: relative;
   top: 462px; }
+  .download-app__header {
+    display: none;
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 300;
+    margin: 0 50px; }
+  .download-app__button {
+    border: 3px solid #ffffff;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 18px;
+    background-color: transparent;
+    padding: 20px 40px;
+    border-radius: 50px;
+    margin: 28px auto; }
+  .download-app__icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 37px; }
+  .download-app__text {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #ffffff;
+    margin: 10px 25px; }
 
-.download-app__header {
-  display: none;
-  color: #ffffff;
-  font-size: 40px;
-  font-weight: 300;
-  margin: 0 50px; }
-
-.download-app__button {
-  border: 3px solid #ffffff;
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 18px;
-  background-color: transparent;
-  padding: 20px 40px;
-  border-radius: 50px;
-  margin: 28px auto; }
-
-.download-app__icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 10px 37px; }
-
-.download-app__text {
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 24px;
-  color: #ffffff;
-  margin: 10px 25px; }
-
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 481px) {
   .download-app {
     background-color: transparent;
     max-width: 335px;
     top: 195px; }
-  .download-app__header {
-    display: block; }
-  .download-app__button {
-    padding: 20px 50px; }
-  .download-app__text {
-    font-size: 18px;
-    margin: 0; }
-  .download-app__icons {
-    margin: 20px 40px 30px 40px; } }
+    .download-app__header {
+      display: block; }
+    .download-app__button {
+      padding: 20px 50px; }
+    .download-app .download-app__text {
+      font-size: 18px;
+      margin: 0; }
+    .download-app .download-app__icons {
+      margin: 20px 40px 30px 40px; } }
 
-@media screen and (min-width: 1200px) {
-  .download-app__header {
-    display: block; }
+@media screen and (min-width: 1025px) {
   .download-app {
     background-color: transparent;
     top: 175px;
     left: 110px; }
-  .download-app__button {
-    padding: 20px 33px;
-    font-size: 21px;
-    margin: 50px 0; }
-  .download-app__text {
-    font-size: 18px;
-    margin: 0; }
-  .download-app__icons {
-    margin: 0 50px 50px 50px; } }
+    .download-app__header {
+      display: block; }
+    .download-app__button {
+      padding: 20px 33px;
+      font-size: 21px;
+      margin: 50px 0; }
+    .download-app__text {
+      font-size: 18px;
+      margin: 0; }
+    .download-app__icons {
+      margin: 0 50px 50px 50px; } }
 
 .efficiency {
   display: none; }
-  @media screen and (min-width: 660px) {
+  @media screen and (min-width: 481px) {
     .efficiency {
       display: block;
       background-color: #ffffff; } }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency {
       display: block;
       background-color: #f2f2f2; } }
@@ -89,25 +85,23 @@
   margin: 0 auto;
   padding: 60px 20px 72px;
   width: 280px; }
-  @media screen and (min-width: 660px) {
+  @media screen and (min-width: 481px) {
     .efficiency__content-wrapper {
       display: flex;
       justify-content: space-between;
       width: 100%; } }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__content-wrapper {
-      padding: 17px 130px 66px;
-      width: 100%; } }
+      padding: 17px 120px 66px; } }
 
 .efficiency__image {
-  box-sizing: border-box;
   padding: 75px 64px 51px;
   width: 238px;
   background-image: url("../../images/diagram-fill.svg"), url("../../images/timer.svg");
   background-repeat: no-repeat, no-repeat;
   background-size: 202px 202px, 238px 276px;
   background-position: 19px 55px, 0 0; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__image {
       padding: 94px 64px 64px 80px;
       width: 298px;
@@ -119,7 +113,7 @@
   font-weight: 700;
   line-height: 150px;
   color: #d22856; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__image-text {
       font-size: 120px;
       line-height: 187px; } }
@@ -127,12 +121,13 @@
 .efficiency__description {
   margin-top: 11px;
   margin-left: 70px; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__description {
       margin-top: 65px;
-      width: 573px;
+      max-width: 490px;
       font-size: 18px;
-      line-height: 30px; } }
+      line-height: 30px;
+      margin-left: 15px; } }
 
 .efficiency__title {
   margin-top: 23px;
@@ -142,7 +137,7 @@
   font-weight: 700;
   line-height: 36px;
   color: #000000; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__title {
       margin-top: 24px;
       margin-bottom: 22px;
@@ -151,7 +146,7 @@
 .efficiency__text {
   margin-top: 10px;
   margin-bottom: 11px; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1025px) {
     .efficiency__text {
       margin-top: 22px;
       margin-bottom: 31px; } }
@@ -174,7 +169,7 @@
 .logo__image--desktop {
   display: none; }
 
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 481px) {
   .logo__image {
     width: 146px;
     height: 40px;
@@ -186,7 +181,7 @@
   .logo__image--desktop {
     display: none; } }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1025px) {
   .logo__image {
     width: 146px;
     height: 40px;
@@ -245,7 +240,7 @@
   width: 35px;
   margin-left: 20px; }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1025px) {
   .menu-icon__button {
     display: none; } }
 
@@ -279,7 +274,7 @@
   text-transform: uppercase;
   text-decoration: none; }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1025px) {
   .menu {
     background-color: transparent;
     border: 0;
@@ -290,6 +285,113 @@
     border: 0; }
   .menu__link {
     font-weight: 400; } }
+
+.slider-reviews {
+  position: relative;
+  top: -56px;
+  padding: 50px 20px 30px;
+  text-align: center;
+  background-color: #ffffff; }
+  @media screen and (min-width: 481px) {
+    .slider-reviews {
+      top: 0; } }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews {
+      padding: 185px 130px 40px;
+      background-image: url("../../images/quote.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 73px;
+      background-size: 79px 63px; } }
+
+.slider-reviews__slide {
+  height: 238px;
+  line-height: 30px; }
+  @media screen and (min-width: 481px) {
+    .slider-reviews__slide {
+      height: 187px; } }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews__slide {
+      margin: 0 auto;
+      padding-top: 0;
+      padding-bottom: 0; } }
+
+.slider-reviews__author {
+  order: -1;
+  margin-top: 13px;
+  margin-bottom: 13px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #000000; }
+  @media screen and (min-width: 481px) {
+    .slider-reviews__author {
+      order: 0;
+      margin-top: 20px;
+      margin-bottom: 0;
+      font-size: 20px; } }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews__author {
+      margin-top: 21px;
+      font-size: 24px;
+      font-weight: 700; } }
+
+.slider-reviews__author-description {
+  display: none; }
+  @media screen and (min-width: 481px) {
+    .slider-reviews__author-description {
+      display: block;
+      margin-top: 2px;
+      margin-bottom: 2px; } }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews__author-description {
+      font-size: 18px; } }
+
+.slider-reviews__quote {
+  margin: 0;
+  max-height: 180px;
+  overflow: hidden; }
+  @media screen and (min-width: 481px) {
+    .slider-reviews__quote {
+      margin-bottom: 13px;
+      max-height: 90px;
+      font-size: 18px; } }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews__quote {
+      position: relative;
+      max-height: 120px;
+      z-index: 2; } }
+
+.slider-reviews__slider-nav {
+  display: none; }
+  @media screen and (min-width: 1025px) {
+    .slider-reviews__slider-nav {
+      display: block; } }
+
+@media screen and (min-width: 1025px) {
+  .slider-nav__slider-button--prev,
+  .slider-nav__slider-button--next {
+    position: absolute;
+    top: 50%;
+    width: 22px;
+    height: 41px; }
+  .slider-nav__slider-button--next {
+    background-image: url("../../images/right-arrow.svg");
+    right: 130px; } }
+  @media screen and (min-width: 1025px) and (min-resolution: 200dpi) {
+    .slider-nav__slider-button--next {
+      background-image: url("../../images/right-arrow@2x.svg"); } }
+
+@media screen and (min-width: 1025px) {
+  .slider-nav__slider-button--prev {
+    background-image: url("../../images/left-arrow.svg");
+    left: 130px; } }
+  @media screen and (min-width: 1025px) and (min-resolution: 200dpi) {
+    .slider-nav__slider-button--prev {
+      background-image: url("../../images/left-arrow@2x.svg"); } }
+
+@media screen and (min-width: 1025px) {
+  .slider-reviews__slides-wrapper {
+    width: 685px;
+    margin: 0 auto; } }
 
 html {
   box-sizing: border-box; }
