--- a/stylesSCSS/blocks/main-page-header-content.scss
+++ b/stylesSCSS/blocks/main-page-header-content.scss
@@ -6,6 +6,21 @@
   background-position: center;
   background-size: cover;
   min-height: 462px;
+  @media screen and (min-resolution: 144dpi) and (min-width: 320px) {
+    background-image: url("../../images/back-mobile@2x.jpg");
+  }
+  &__iphone5-in-hand-img {
+    position: absolute;
+    top: 175px;
+    right: -10px;
+    width: 498px;
+  }
+  &__iphone-screen-img {
+    position: absolute;
+    top: 204px;
+    right: 108px;
+    width: 111px
+  }
 }
 .iphone-image {
   position: relative;
@@ -32,17 +47,13 @@
   display: none;
 }
 
-@media screen and (min-resolution: 144dpi) and (min-width: 320px) {
-  .header-content {
-    background-image: url("../../images/back-mobile@2x.jpg");
-  }
-}
-@media screen and (min-width: 660px) {
+
+@media screen and (min-width: 481px) {
   .header-content {
     background-image: url("../../images/back-tablet@1x.jpg");
     background-position: cover;
     min-height: 729px;
-    max-width: 1200px;
+    max-width: 1025px;
   }
   .iphone-image--mobile {
     display: none;
@@ -101,20 +112,8 @@
     top: 77px;
   }
 }
-@media screen and (min-resolution: 144dpi) and (min-width: 1200px) {
+@media screen and (min-resolution: 144dpi) and (min-width: 1025px) {
   .header-content {
     background-image: url("../../images/back-desktop@2x.jpg");
   }
-}
-.header-content__iphone5-in-hand-img {
-  position: absolute;
-  top: 175px;
-  right: -10px;
-  width: 498px;
-}
-.header-content__iphone-screen-img {
-  position: absolute;
-  top: 204px;
-  right: 108px;
-  width: 111px
 }
