--- a/stylesSCSS/main.scss
+++ b/stylesSCSS/main.scss
@@ -8,6 +8,7 @@
 @import './blocks/efficiency.scss';
 @import './blocks/header-logo.scss';
 @import './blocks/main-menu.scss';
+@import './blocks/slider-reviews.scss';
 
 html {
   box-sizing: border-box;
