--- a/stylesSCSS/main.scss
+++ b/stylesSCSS/main.scss
@@ -1,14 +1,17 @@
-@import './variables.css';
-@import './fonts.css';
-@import './blocks/main-page-header.css';
-@import './blocks/main-page-header-content.css';
-@import './blocks/main-content.css';
-@import './blocks/features.css';
-@import './blocks/download-app.scss';
-@import './blocks/efficiency.scss';
-@import './blocks/header-logo.scss';
-@import './blocks/main-menu.scss';
-@import './blocks/slider-reviews.scss';
+@import './common/variables';
+@import './common/fonts';
+@import './blocks/main-page-header';
+@import './blocks/main-page-header-content';
+@import './blocks/main-content';
+@import './blocks/features';
+@import './blocks/download-app';
+@import './blocks/efficiency';
+@import './blocks/header-logo';
+@import './blocks/main-menu';
+@import './blocks/slider-reviews';
+@import './blocks/contacts';
+@import './blocks/footer';
+@import './blocks/price';
 
 html {
   box-sizing: border-box;
