--- a/stylesSCSS/blocks/_footer.scss
+++ b/stylesSCSS/blocks/_footer.scss
@@ -8,40 +8,39 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.footer-logo {
-  display: block;
-  width: 146px;
-  height: 40px;
-  color: $dark-blue;
-
-  &[href]:hover {
-    color: $pink;
+  @media screen and (min-width: 481px) {
+    padding: 0 20px;
+    height: 127px;
   }
-
-  &[href]:active {
-    opacity: 0.3;
+  @media screen and (min-width: 1025px) {
+    padding: 0 130px;
+    height: 197px;
   }
 }
 
 .footer-logo__image {
-  display: block;
-  width: 146px;
-  height: 40px;
-  fill: currentColor;
-  pointer-events: none;
-
-  &--mobile {
+  cursor: pointer;
+  margin-bottom: 20px;
+  &:hover {
+    fill: $pink;
+  }
+  &:active {
+    fill: #283645;
+    opacity: 0.3;
+  }
+  &--tablet {
+    display: none;
     @media screen and (min-width: 481px) {
+      display: block;
+    }
+    @media screen and (min-width: 1025px) {
       display: none;
     }
   }
 
-  &--tablet {
+  &--desktop {
     display: none;
-
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: 1025px) {
       display: block;
     }
   }
@@ -66,7 +65,7 @@
 
 .social-links__item {
   margin: 0 6px;
-
+  list-style: none;
   @media screen and (min-width: 481px) {
     margin: 0 3px 0 9px;
   }
@@ -104,4 +103,22 @@
   margin: auto;
   fill: currentColor;
   pointer-events: none;
+}
+
+.page-footer__copyright {
+  display: flex;
+  align-items: center;
+}
+.page-footer__copyright-icon {
+  fill: $pink;
+  margin-top: 10px;
+  &:hover {
+    fill: #283645;
+  }
+  &:active {
+    opacity: 0.3;
+  }
+}
+.page-footer__copyright-text {
+  margin-right: 15px;
 }
