--- a/stylesSCSS/blocks/_price.scss
+++ b/stylesSCSS/blocks/_price.scss
@@ -1,22 +1,22 @@
 .price {
   padding-top: 91px;
   padding-bottom: 32px;
-  background-color: $silver;
-  background-image: url("../img/bg-triangle-white.svg");
-  background-size: 100% 25px;
-  background-position: 0 0;
+  background-image: url("../../images/grey-shape-mobile.svg");
+  background-position: 0 -68px;
   background-repeat: no-repeat;
 
   @media screen and (min-width: 481px) {
     padding-top: 86px;
     padding-bottom: 69px;
-    background-size: 100% 50px;
+    background-image: url("../../images/grey-shape-tablet.svg");
+    background-position: 0 0;
   }
 
   @media screen and (min-width: 1025px) {
     padding-top: 150px;
     padding-bottom: 95px;
-    background-size: 100% 80px;
+    background-image: url("../../images/grey-shape-desktop.svg");
+    background-position: 0 0;
   }
 }
 
@@ -24,8 +24,13 @@
   overflow: hidden;
   line-height: 30px;
   text-transform: uppercase;
+  @media screen and (min-width: 481px) {
+    padding: 0 20px;
+  }
+  @media screen and (min-width: 1025px) {
+    padding: 0 130px;
+  }
 }
-
 .price__slider-controls {
   margin-top: 40px;
   margin-bottom: 15px;
@@ -40,11 +45,15 @@
   left: 50%;
   transform: translateX(-50%);
   transition: left 0.4s linear;
+  margin-top: 50px;
 
   @media screen and (min-width: 481px) {
     position: static;
     left: auto;
     transform: none;
+  }
+  @media screen and (min-width: 1025px) {
+    margin-top: 30px;
   }
 }
 .table-price {
@@ -89,43 +98,49 @@
   &:last-child {
     border-right-color: $dark-blue;
   }
-
-  &--hit {
-    background-image: url("../img/bg-hit.svg");
-    background-size: image-size("../img/bg-hit.svg");
-    background-position: 0 0;
-    background-repeat: no-repeat;
-
-    @media screen and (min-width: 481px) {
-      background-image: url("../img/bg-hit-tablet.svg");
-      background-size: image-size("../img/bg-hit-tablet.svg");
-    }
-
-    @media screen and (min-width: 1025px) {
-      background-image: url("../img/bg-hit.svg");
-      background-size: image-size("../img/bg-hit.svg");
-    }
-  }
-
-  &--hit::before {
-    content: attr(data-hit-text);
+  .ribbon {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
     position: absolute;
-    top: 12px;
-    left: 10px;
-    transform: rotate(-45deg);
+  }
+  .ribbon::before,
+  .ribbon::after {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    display: block;
+  }
+  .ribbon span {
+    position: absolute;
+    display: block;
+    width: 100px;
+    background-color: $pink;
     font-size: 14px;
     font-weight: 400;
-    color: $white;
-
-    @media screen and (min-width: 481px) {
-      top: 3px;
-      left: 7px;
-    }
-
-    @media screen and (min-width: 1025px) {
-      top: 12px;
-      left: 12px;
-    }
+  }
+  
+  .ribbon-top-left {
+    top: 0px;
+    left: -2px;
+  }
+  .ribbon-top-left::before,
+  .ribbon-top-left::after {
+    border-top-color: transparent;
+    border-left-color: transparent;
+  }
+  .ribbon-top-left::before {
+    top: 0;
+    right: 0;
+  }
+  .ribbon-top-left::after {
+    bottom: 0;
+    left: 0;
+  }
+  .ribbon-top-left span {
+    right: 27px;
+    top: 5px;
+    transform: rotate(-45deg);
   }
 }
 
@@ -197,6 +212,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  justify-content: center;
 
   @media screen and (min-width: 481px) {
     justify-content: center;
@@ -227,5 +243,44 @@
     width: 27px;
     height: 27px;
     background-image: url("../../images/icons/price-no-icon.svg");
+  }
+}
+
+.slider-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 12px;
+  @media screen and (min-width: 481px) {
+    display: none;
+  }
+}
+
+.slider-controls__button {
+  box-sizing: content-box;
+  margin-left: 9px;
+  margin-right: 10px;
+  padding: 0;
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-radius: 50%;
+  font-style: inherit;
+  background-color: fade-out($dark-blue, 0.3);
+  cursor: pointer;
+  outline: none;
+
+  &:not(&--current):hover {
+    background-color: fade-out($dark-blue, 0.6);
+  }
+
+  &:not(&--current):active {
+    background-color: fade-out($dark-blue, 0.1);
+  }
+
+  &--current {
+    box-shadow: 0 0 0 3px $dark-blue;
+    background-color: transparent;
+    cursor: default;
   }
 }
