LEARN-476: Map design added

--- a/stylesSCSS/main.scss
+++ b/stylesSCSS/main.scss
@@ -12,6 +12,7 @@
 @import './blocks/contacts';
 @import './blocks/footer';
 @import './blocks/price';
+@import './blocks/map';
 
 html {
   box-sizing: border-box;
