--- a/stylesCSS/main.css
+++ b/stylesCSS/main.css
@@ -773,6 +773,9 @@
     .contacts {
       padding: 64px 0 19px; } }
 
+.contacts__list::after {
+  border-bottom: 5px solid black; }
+
 .contacts__title {
   margin-top: 24px;
   margin-bottom: 35px;
@@ -855,6 +858,22 @@
 
 .contacts__list-address {
   font-style: normal; }
+
+.contacts__triangle {
+  background-image: url("../../images/icons/triangle-white-contacts-mobile.svg");
+  width: 100%;
+  height: 123px;
+  background-position: 0 38px;
+  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 2; }
+  @media screen and (min-width: 481px) {
+    .contacts__triangle {
+      background-position: 0 27px; } }
+  @media screen and (min-width: 1025px) {
+    .contacts__triangle {
+      background-position: 0 18px;
+      height: 145px; } }
 
 .page-footer {
   display: none; }
@@ -1189,6 +1208,37 @@
     box-shadow: 0 0 0 3px #1d2632;
     background-color: transparent;
     cursor: default; }
+
+.map {
+  position: relative;
+  z-index: 1;
+  background-image: url("../../images/map-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  height: 200px;
+  background-position-y: -442px; }
+  @media screen and (min-width: 481px) {
+    .map {
+      background-image: url("../../images/map-tablet@1x.jpg");
+      height: 373px;
+      background-position-y: -330px; } }
+  @media screen and (min-width: 1025px) {
+    .map {
+      background-image: url("../../images/map-desktop@1x.jpg");
+      height: 501px;
+      background-position: -535px; } }
+
+.map__marker {
+  position: absolute;
+  top: 50%;
+  left: 42%; }
+  @media screen and (min-width: 481px) {
+    .map__marker {
+      top: 58%;
+      left: 47%; } }
+  @media screen and (min-width: 1025px) {
+    .map__marker {
+      top: 58%;
+      left: 63%; } }
 
 html {
   box-sizing: border-box; }
