--- a/stylesSCSS/blocks/_contacts.scss
+++ b/stylesSCSS/blocks/_contacts.scss
@@ -12,7 +12,9 @@
     padding: 64px 0 19px;
   }
 }
-
+.contacts__list::after {
+  border-bottom: 5px solid black;
+}
 .contacts__title {
   margin-top: 24px;
   margin-bottom: 35px;
@@ -80,7 +82,6 @@
       order: 2;
     }
   }
-
   &:last-child {
     margin-bottom: 0;
   }
@@ -124,4 +125,21 @@
 
 .contacts__list-address {
   font-style: normal;
+}
+
+.contacts__triangle {
+  background-image: url('../../images/icons/triangle-white-contacts-mobile.svg');
+  width: 100%;
+  height: 123px;
+  background-position: 0 38px;
+  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 2;
+ @media screen and (min-width: 481px) {
+  background-position: 0 27px;
+ }
+ @media screen and (min-width: 1025px) {
+  background-position: 0 18px;
+  height: 145px;
+ }
 }
