--- a/stylesSCSS/blocks/_map.scss
+++ b/stylesSCSS/blocks/_map.scss
@@ -1,77 +1,33 @@
 .map {
   position: relative;
-  overflow: hidden;
+  z-index: 1;
+  background-image: url('../../images/map-mobile@1x.jpg');
+  background-repeat: no-repeat;
   height: 200px;
+  background-position-y: -442px;
 
   @media screen and (min-width: 481px) {
+    background-image: url('../../images/map-tablet@1x.jpg');
     height: 373px;
+    background-position-y: -330px;
   }
 
   @media screen and (min-width: 1025px) {
+    background-image: url('../../images/map-desktop@1x.jpg');
     height: 501px;
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 33px;
-    background-image: url("../../images/icons/triangle-white-contacts-mobile.svg");
-    background-size: 100% 33px;
-    background-position: 50% 0;
-    background-repeat: no-repeat;
-
-    @media screen and (min-width: 481px) {
-      height: 67px;
-      background-size: 100% 67px;
-    }
-
-    @media screen and (min-width: 1025px) {
-      height: 104px;
-      background-size: 100% 104px;
-    }
+    background-position: -535px;
   }
 }
-
-.map__image {
-  position: absolute;
-  top: -222%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 320px;
-
-  @media screen and (min-width: 481px) {
-    top: -93%;
-    width: 700px;
-  }
-
-  @media screen and (min-width: 1025px) {
-    top: -53%;
-    width: 1200px;
-  }
-}
-
 .map__marker {
   position: absolute;
-  z-index: 10;
-  left: 50%;
-  top: 55%;
-  transform: translate(-50%, -45%);
-  width: 35px;
-  height: 35px;
-  background-image: url("../../images/map-marker.svg");
-  background-size: 35px 35px;
-  background-repeat: no-repeat;
-}
-
-.map__interactive {
-  position: absolute;
-  z-index: 50;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 42%;
+  @media screen and (min-width: 481px) {
+    top: 58%;
+    left: 47%;
+  }
+  @media screen and (min-width: 1025px) {
+    top: 58%;
+    left: 63%;
+  }
 }
