--- a/stylesCSS/main.css
+++ b/stylesCSS/main.css
@@ -1228,7 +1228,7 @@
       background-position: -535px; } }
 
 .map__marker {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 42%; }
   @media screen and (min-width: 481px) {
