--- a/stylesSCSS/blocks/_map.scss
+++ b/stylesSCSS/blocks/_map.scss
@@ -19,7 +19,7 @@
   }
 }
 .map__marker {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 42%;
   @media screen and (min-width: 481px) {
