LEARN-476: Map position fixed

--- a/stylesSCSS/blocks/_map.scss
+++ b/stylesSCSS/blocks/_map.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   height: 200px;
   background-position-y: -442px;
+  background-position: center;
 
   @media screen and (min-width: 481px) {
     background-image: url('../../images/map-tablet@1x.jpg');
