--- a/stylesCSS/main.css
+++ b/stylesCSS/main.css
@@ -862,7 +862,7 @@
 .contacts__triangle {
   background-image: url("../../images/icons/triangle-white-contacts-mobile.svg");
   width: 100%;
-  height: 123px;
+  height: 200px;
   background-position: 0 38px;
   background-repeat: no-repeat;
   position: absolute;
@@ -872,8 +872,7 @@
       background-position: 0 27px; } }
   @media screen and (min-width: 1025px) {
     .contacts__triangle {
-      background-position: 0 18px;
-      height: 180px; } }
+      background-position: 0 18px; } }
 
 .page-footer {
   display: none; }
@@ -1215,7 +1214,8 @@
   background-image: url("../../images/map-mobile@1x.jpg");
   background-repeat: no-repeat;
   height: 200px;
-  background-position-y: -442px; }
+  background-position-y: -442px;
+  background-position: center; }
   @media screen and (min-width: 481px) {
     .map {
       background-image: url("../../images/map-tablet@1x.jpg");
