--- a/stylesSCSS/blocks/_slider-reviews.scss
+++ b/stylesSCSS/blocks/_slider-reviews.scss
@@ -136,3 +136,11 @@
 .slick-dotted.slick-slider {
   margin-bottom: 0 !important;
 }
+.slider-reviews__slider-controls {
+  margin-top: 40px;
+  margin-bottom: 15px;
+  display: flex;
+  @media screen and (min-width: 1025px) {
+    display: none;
+  }
+}
