--- a/stylesSCSS/main.scss
+++ b/stylesSCSS/main.scss
@@ -13,6 +13,7 @@
 @import './blocks/footer';
 @import './blocks/price';
 @import './blocks/map';
+@import './blocks/slider-controls';
 
 html {
   box-sizing: border-box;
